# fork-and-pipe

./: CMakeLists.txt  README.md
src/: fork-and-pipe.cxx
